syntax = "proto3";

package microservice.api.v1.events;

option go_package = "github.com/sei-ri/microservice.io/api/v1/events;events";

message AccountCreated {
  string id = 1;
  string email = 2;
  string password = 3;
  string created_at = 5;
  string updated_at = 6;
}

message AccountPasswordChanged {
  string id = 1;
  string password = 2;
}